Update api classes generation Add Users api
